--- a/battleship.html
+++ b/battleship.html
@@ -12,12 +12,20 @@
 
   <body>
     <aside class="thinLine" id="thinLine">
-      <!--
-                 <audio src="./sound/pirates_of_the_caribbean_theme_song_mp3_27596.mp3" autoplay loop >
-                    <p>dont support</p>
-                    <embed src="./sound/pirates_of_the_caribbean_theme_song_mp3_27596.mp3" height="90" width="180" hidden="true" type="">
-                </audio>
-               -->
+      <audio
+        src="./sound/pirates_of_the_caribbean_theme_song_mp3_27596.mp3"
+        autoplay
+        loop
+      >
+        <p>dont support</p>
+        <embed
+          src="./sound/pirates_of_the_caribbean_theme_song_mp3_27596.mp3"
+          height="90"
+          width="180"
+          hidden="true"
+          type=""
+        />
+      </audio>
 
       <main class="thinmain">
         <section>BATTLE SHIP</section>
